data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2174.wast
;; 4. **Test 4**: Create a function that encompasses multiple loops, each with a `br_table` branching to different targets based on a counter. Configure the targets to have different operand sequences.    - **Constraint**: Checks operand stack management and proper type matching.    - **Relation to Infinite Loops**: Mismanagement of operand stack can prevent correct loop termination.

(assert_invalid
  (module
    (func (result i32)
      (loop
        (block (result i64)
          (br_table 0 1 (i32.const 1) (i32.const 0))
        )
      )
      (loop
        (block (result i32 i32)
          (br_table 0 1 2 (i32.const 2))
        )
      )
    )
  )
  "type mismatch"
)